my branch done ;D

--- a/Assets/StreamingAssets/Events/{Player} ask the traveling caravan about any happenings nearby.json
+++ b/Assets/StreamingAssets/Events/{Player} ask the traveling caravan about any happenings nearby.json
@@ -17,7 +17,7 @@
     "karma": 0
   },
   "onSuccess": {
-    "displayText": "{Player} decided it would be wise to gather some information before setting out.\n“There’s a madman roaming the forest,” one of the merchants said. “Attacking travelers, soldiers, anyone who crosses his path. Claims he’s some kind of ‘anti-Angel’ rather bold, if you ask me. He even attacked our caravan after finding out where we were heading. That’s why we stopped here; one of our wagon wheels was broken during the attack”.",
+    "displayText": "{Player} decided it would be wise to gather some information before setting out.\n“There's a madman roaming the forest,” one of the merchants said. “Attacking travelers, soldiers, anyone who crosses his path. Claims he's some kind of ‘anti-Angel' rather bold, if you ask me. He even attacked our caravan after finding out where we were heading. That's why we stopped here; one of our wagon wheels was broken during the attack”.",
     "modifyAttributes": {
       "strength": 0,
       "dexterity": 0,
